--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/dev": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@react-native-async-storage/async-storage": "^1.21.0",
     "date-fns": "^3.3.1",
     "expo": "52.0.33",
+    "expo-app-loading": "^2.1.1",
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
-    "expo-font": "^13.0.3",
+    "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
